syntax = "proto3";

package account;

option java_multiple_files = true;
option java_package = "com.hts.generated.grpc";
option java_outer_classname = "AccountProto";

// 공통 응답 코드
enum AccoutResult {
  SUCCESS = 0;
  INSUFFICIENT_FUNDS = 1;
  ACCOUNT_NOT_FOUND = 2;
  INTERNAL_ERROR = 3;
  INVALID_REQUEST = 4;
  ACCOUNT_SUSPENDED = 5;
  DUPLICATE_REQUEST = 6;
  INVALID_AMOUNT = 7;
}

// 예수금 예약 요청
message ReserveCashRequest {
  int64 account_id = 1;
  string amount = 2;        // 가격 BigDecimal로 파싱
  string reserve_id = 3;    // 멱등성 + 예약 식별자
  string order_id = 4;  // 클라이언트 로컬 주문 ID
}

// 예수금 예약 해제 요청
message CancelCashReserveRequest {
  int64 account_id = 1;
  string reserve_id = 2;
}

message ReservePositionRequest{
  int64 account_id = 1;
  string symbol = 2;        // 종목 코드
  string amount = 3;        // 가격 BigDecimal로 파싱
  int64 quantity = 4;       // 예약 수량
  string reserve_id = 5;    // 멱등성 + 예약 식별자
  string order_id = 6;      // 클라이언트 로컬 주문 ID
}

message CancelPositionReserveRequest{
  int64 account_id = 1;
  string reserve_id = 2;
}

// 공통 응답 메시지
message CommonReply {
  AccoutResult code = 1;
}

// 계정 생성 요청
message CreateAccountRequest {
  int64 account_id = 1;
  string password = 2;
}

// 계정 삭제 요청
message DeleteAccountRequest {
  int64 account_id = 1;
}

// 계정 상태 변경 요청
message UpdateAccountStatusRequest {
  int64 account_id = 1;
  string status = 2;  // ACTIVE, LOCKED, SUSPENDED
  string reason = 3;
}

service AccountService {
  rpc ReserveCash(ReserveCashRequest) returns (CommonReply);
  rpc CancelCashReserve(CancelCashReserveRequest) returns (CommonReply);
  rpc ReservePosition(ReservePositionRequest) returns (CommonReply);
  rpc CancelPositionReserve(CancelPositionReserveRequest) returns (CommonReply);

  rpc CreateAccount(CreateAccountRequest) returns (CommonReply);
  rpc DeleteAccount(DeleteAccountRequest) returns (CommonReply);

  rpc UpdateAccountStatus(UpdateAccountStatusRequest) returns (CommonReply);
}